# misarta

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
doc/: python-binding-implementation.md  python-binding-plan.md  spec.md
misarta-formats/: Cargo.toml
misarta-formats/src/: lib.rs  mjcf.rs  sdf.rs  urdf.rs  usd.rs  util.rs
misarta-formats/tests/: loader.rs
misarta-formats/tests/model/sdf/: test_robot.sdf
misarta-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
misarta-py/python/misarta/: __init__.py
misarta-py/src/: algorithms.rs  conv.rs  data.rs  lib.rs  loaders.rs  model.rs  se3.rs
misarta-py/tests/: conftest.py  test_dynamics.py  test_fk.py  test_smoke.py
src/: aba.rs  aba_derivatives.rs  analysis.rs  centroidal.rs  collada.rs  collision.rs  config.rs  constrained.rs  constraint.rs  coriolis.rs  crba.rs  data.rs  decimate.rs  decompose.rs  fk.rs  frames.rs  geometry.rs  ik.rs  jacobian.rs  joint.rs  kinematics_utils.rs  lib.rs  limits.rs  manifold.rs  mesh.rs  mimic.rs  model.rs  optimization.rs  qp.rs  reduced.rs  regressor.rs  rnea.rs  rnea_derivatives.rs  sdf.rs  se3.rs  trajectory.rs  urdf.rs  utils.rs
src/constraint/: error.rs  ik.rs  jacobian.rs  mod.rs  qp_ik.rs  types.rs
src/native/: build.rs  edit.rs  mesh_load.rs  mod.rs  parse.rs  report.rs  schema.rs  source.rs  write.rs
tests/: autodiff.rs  kinematics.rs  loader.rs
tests/fixtures/meshes/: test_box.stl
tests/model/urdf/: test_robot.urdf
