[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "misarta"
version = "0.1.0"
description = "Python bindings for misarta — Rust rigid-body dynamics library (Pinocchio-equivalent)."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Takara Kasai", email = "takara.kasai@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "misarta._misarta"
python-source = "python"
manifest-path = "Cargo.toml"
